--- a/index.html
+++ b/index.html
@@ -5,10 +5,139 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment-responsive</title>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="styles/style.css">
+    <!-- Font-awesome -->
+    <script src="https://kit.fontawesome.com/59893a3cb0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
+        <nav class="bannar-area">
+            <div class="banner">
+                <h1>Conmebol</h1>
+                <h1>Copa America</h1>
+                <h1>2021</h1>
+                <a href="">Watch Live →</a>
+            </div>
+            <div class="player-width">
+                <img  src="images/banner.png" alt="">
+
+            </div>
+        </nav>
+    </header>
+    <!-- header end -->
+    <main>
+        <!-----------------------
+             All players area 
+        ------------------------->
+        <section class="container">
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h2 class="player-name">Neymar Jr</h2>
+                    <p class="player-detail">Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer..</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h2 class="player-name">Lionel Messi</h2>
+                    <p class="player-detail">Lionel Messi, in full Lionel Andrés Messi, also called Leo Messi, (born June 24, 1987, Rosario, Argentina),</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h2 class="player-name">Cristiano Ronaldo</h2>
+                    <p class="player-detail">Cristiano Ronaldo, in full Cristiano Ronaldo dos Santos Aveiro, (born February 5, 1985, Funchal, Madeira, Portugal),</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h2 class="player-name">Paulo Dybala</h2>
+                    <p class="player-detail">Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h2 class="player-name">Mesut Ozil</h2>
+                    <p class="player-detail">Mesut Özil (German pronunciation: [ˈmeːzut ˈøːzil], Turkish: [meˈsut œˈzil]; born 15 October 1988) is a German professional footballer</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h2 class="player-name">Mauro Icardi</h2>
+                    <p class="player-detail">Mauro Emanuel Icardi (Spanish pronunciation: [ˈmawɾo emaˈnwel iˈkaɾði]; born 19 February 1993) is an Argentine professional footballer </p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-7.png" alt="">
+                    <h2 class="player-name">Di Maria</h2>
+                    <p class="player-detail">Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-8.png" alt="">
+                    <h2 class="player-name">Kylian Mbappé</h2>
+                    <p class="player-detail">Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward for Ligue.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-9.png" alt="">
+                    <h2 class="player-name">Mohammed Salah</h2>
+                    <p class="player-detail">Mohammed Salah started his senior career with Egyptian club Al Mokawloon, departing shortly thereafter.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-10.png" alt="">
+                    <h2 class="player-name">Harry Kane</h2>
+                    <p class="player-detail">Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-11.png" alt="">
+                    <h2 class="player-name">Kevin De Bruyne</h2>
+                    <p class="player-detail">Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League.</p>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-12.png" alt="">
+                    <h2 class="player-name">Philippe Coutinho</h2>
+                    <p class="player-detail">Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking.</p>
+                </div>
+            </div> 
+          </div>
+        </section>
+        <!------------------------------
+             Football match area
+         ------------------------------->
+         <section class="football-container">
+             <div class="football-match-area">
+                 <div class="football-match-detail">
+                    <h1>All Highlights </h1>
+                    <h1>Copa America 2021</h1>
+                    <p>Amet minim mollit non deserunt ullamco est sit
+                       aliqua dolor do amet sint.aha ki Amet minim mollit non deserunt ullamco est sit
+                       aliqua dolor do amet sint.aha ki</p>
+                    <a href="">Watch Now→</a>
+                 </div>
+                 <div class="football-match">
+                     <img src="images/neymar.jpg" alt="">
+                 </div>
+             </div>
+         </section>
+
+         <!-- Football-logo-area -->
+         <section class="container">
+             <div class="football-logo">
+                 <div class="logo">
+                     <img src="images/Logo.png" alt="">
+                 </div>
+                 <div class="social-icon">
+                     <a href=""><i class="fab fa-facebook"></i></a>
+                     <a href=""><i class="far fa-futbol"></i></a>
+                     <a href=""><i class="fab fa-instagram"></i></a>
+                     <a href=""><i class="fab fa-youtube"></i></a>
+                 </div>
+
+             </div>
+         </section>
+         <!-- Footer area -->
+         <footer>
+            <p>©Abrar Fahim 2021, all rights reserved</p>
+         </footer>
+        
+    </main>
 
 </body>
 
