finished my ever responsive website

--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
 </head>
 
 <body>
-    <!-- header start -->
+    <!-----------------
+       header start  
+    ------------------->
     <header>
         <nav class="bannar-area">
             <div class="banner">
-                <h1>Conmebol</h1>
-                <h1>Copa America</h1>
+                <h1>CONMEBOL</h1>
+                <h1>COPA AMERICA</h1>
                 <h1>2021</h1>
-                <a href="">Watch Live →</a>
+                <a href="https://youtu.be/pcusweGBhhk">Watch Live →</a>
             </div>
             <div class="player-width">
                 <img  src="images/banner.png" alt="">
-
             </div>
         </nav>
     </header>
@@ -106,33 +107,69 @@
                  <div class="football-match-detail">
                     <h1>All Highlights </h1>
                     <h1>Copa America 2021</h1>
-                    <p>Amet minim mollit non deserunt ullamco est sit
-                       aliqua dolor do amet sint.aha ki Amet minim mollit non deserunt ullamco est sit
-                       aliqua dolor do amet sint.aha ki</p>
-                    <a href="">Watch Now→</a>
+                    <p>The 2021 Copa América was the 47th edition of the Copa América, the international men's football championship organised by South America's football ruling body CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021.[</p>
+                    <a href="https://youtu.be/pcusweGBhhk">Watch Now→</a>
                  </div>
                  <div class="football-match">
                      <img src="images/neymar.jpg" alt="">
                  </div>
              </div>
          </section>
-
-         <!-- Football-logo-area -->
+         <!-------------------------------
+             copa ameria video teaser area 
+          -------------------------------->
+          <section class="teaser-container">
+              <div class="video-teaser-area">
+                  <div class="video-title">
+                      <h1>COPA AMERICA 2021</h1>
+                      <H1>FINAL</H1>
+                      <H2>Video Teaser</H2>
+                  </div>
+                  <div class="video-teaser">
+                      <video controls src="video/final-teaser.mp4"></video>
+                  </div>
+              </div>
+          </section>
+         <!-------------------------------
+             copa america final area
+         --------------------------------->
+         <section class="container">
+            <div class="match-year">
+                <h1>COPA AMERICA</h1>
+                <h1>Argentina V/S Brazil</h1>
+                <h2>2021</h2>
+                <h1>FINAL</h1>
+            </div>
+            <div class="copa-america-final">
+                <div class="final-team">
+                    <img src="images/final.jpg" alt="">
+                </div>
+                <div class="final-team-detail">
+                    <h1>After 28years</h1>
+                    <h1>Champion Argentina</h1>
+                    <p>Argentina won their first major title in 28 years on Saturday when an Angel Di Maria goal gave them a 1-0 win over Brazil and a record-equalling 15th Copa America crown. Argentina's victory was a particular triumph for Barcelona striker Lionel Messi, who picked up his first title in a blue-and-white shirt after more than a decade of club and individual honours.</p>
+                </div>
+            </div>
+        </section>
+         <!--------------------------
+             Football-logo-area
+         ----------------------------->
          <section class="container">
              <div class="football-logo">
                  <div class="logo">
                      <img src="images/Logo.png" alt="">
                  </div>
                  <div class="social-icon">
-                     <a href=""><i class="fab fa-facebook"></i></a>
-                     <a href=""><i class="far fa-futbol"></i></a>
-                     <a href=""><i class="fab fa-instagram"></i></a>
-                     <a href=""><i class="fab fa-youtube"></i></a>
+                     <a href="https://www.facebook.com/fahim.jahin.3"><i class="fab fa-facebook"></i></a>
+                     <a href="https://copaamerica.com/en/"><i class="far fa-futbol"></i></a>
+                     <a href="https://www.linkedin.com/in/abrar-fahim-67aa45214/"><i class="fab fa-instagram"></i></a>
+                     <a href="https://www.youtube.com/channel/UC_6uhlpXmT1wpQknmgN7IhQ/videos"><i class="fab fa-youtube"></i></a>
                  </div>
-
              </div>
          </section>
-         <!-- Footer area -->
+         <!----------------------
+             Footer area 
+          ----------------------->
          <footer>
             <p>©Abrar Fahim 2021, all rights reserved</p>
          </footer>
